[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/screens/dialog/edit_profile_dialog.gd" type="Script" id=1]
[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=2]

[node name="UpdateProfileDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -105.0
margin_right = 250.0
margin_bottom = 105.0
custom_constants/separation = 50

[node name="UserName" type="TextEdit" parent="VBoxContainer"]
margin_right = 500.0
margin_bottom = 80.0
rect_min_size = Vector2( 500, 80 )
custom_constants/completion_max_width = 0

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 500.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 80 )
text = "Submit"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -89.0
margin_right = 242.0
margin_bottom = 89.0
rect_min_size = Vector2( 250, 87.5 )
window_title = "Please Confirm"
dialog_text = "Confirm change username"

[connection signal="text_changed" from="VBoxContainer/UserName" to="." method="_on_UserName_text_changed"]
[connection signal="pressed" from="VBoxContainer/SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
